--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -7,7 +7,7 @@
 [url "git@github.com:"]
 	insteadOf = https://github.com/
 [commit]
-	template = /Users/ccpost/.stCommitMsg
+	#template = /Users/ccpost/.stCommitMsg
 [grep]
 	lineNumber = true
 [rerere]
